# rustdose-3d

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  README.md  build-coverage.sh  compare.py  coverage.py  fuzz.py  generate.py  harness.py  pyproject.toml  refuzz.py  rust-conversion-plan.md  strategies.py  test_differential.py
.github/workflows/: ci.yml
corpus/seeds/: cif_input.txt  ddm_bfactor.txt  ddm_leal.txt  heavy_atoms.txt  large_crystal.txt  microed_basic.txt  montecarlo_basic.txt  montecarlo_fl_escape.txt  multi_wedge.txt  smallmole.txt  (+4 more)
crates/raddose3d/: Cargo.toml  build.rs
crates/raddose3d-cli/: Cargo.toml
crates/raddose3d-cli/src/: main.rs
crates/raddose3d-wasm/: Cargo.toml  README.md
crates/raddose3d-wasm/src/: lib.rs
crates/raddose3d-wasm/tests/: wasm.rs
crates/raddose3d-wasm/web/: index.html
crates/raddose3d/src/: container.rs  ddm.rs  energy_distribution.rs  experiment.rs  lib.rs  nist_tables.rs  residue.rs  wedge.rs  writer.rs
crates/raddose3d/src/beam/: experimental.rs  gaussian.rs  mod.rs  tophat.rs
crates/raddose3d/src/coefcalc/: average.rs  compute.rs  from_cif.rs  from_params.rs  from_pdb.rs  from_sequence.rs  from_sequence_saxs.rs  micro_ed.rs  mod.rs  saxs.rs  small_molecules.rs
crates/raddose3d/src/crystal/: cuboid.rs  escape.rs  mod.rs  polyhedron.rs  spherical.rs
crates/raddose3d/src/element/: database.rs  database_em.rs  mod.rs
crates/raddose3d/src/output/: dwds.rs  exposure_summary.rs  final_dose_state.rs  fluence_per_dose_hist.rs  html_report.rs  mod.rs  progress.rs  rde_csv.rs  summary.rs  voxel_data.rs
crates/raddose3d/src/simulation/: java_random.rs  mc.rs  micro_ed.rs  mod.rs  xfel.rs
crates/raddose3d/tests/: coefcalc_coefficients.rs  golden_validation.rs  pdb_validation.rs  phase5_validation.rs  phase6_validation.rs  phase7_validation.rs
docs/: PLAN-unit-tests.md  improvement-plan.md  java-bugs-analysis.md  project_gumbel_pdf_beta_sign.md
scripts/: generate_nist_tables.py
(+48 files in other folders)
