[package]
name = "raddose3d-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for RADDOSE-3D"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
raddose3d = { path = "../raddose3d" }
raddose3d-parser = { path = "../raddose3d-parser" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

[dev-dependencies]
wasm-bindgen-test = "0.3"
