[package]
name = "raddose3d"
version = "0.1.0"
edition = "2021"
description = "Radiation dose modelling for macromolecular crystallography"

[dependencies]
raddose3d-parser = { path = "../raddose3d-parser" }
ndarray = "0.16"
nalgebra = "0.33"
statrs = "0.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
rand = "0.8"
thiserror = "2"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
ureq = "3"
